Switch to picocli for Argument Parsning